--- a/estilos/s.css
+++ b/estilos/s.css
@@ -1,29 +1,102 @@
-.cont {
-  background-color: #bee1f4;
+* {
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-.logo {
+.cont {
+  background-color: #f7fd91;
+}
+
+.logo img {
   max-width: 100px;
   height: auto;
   border-radius: 20%;
 }
-
-.card {
-  background-color: #bee1f4;
+.logo h1 {
+  font-family: "Cormorant SC", serif;
+  color: #006E51;
 }
-.card .m1 {
+
+.login {
+  background-color: #f7fd91;
+  border: none;
+}
+.login h2 {
+  color: #006E51;
+}
+.login .m1 {
   padding: 12px;
 }
-.card img {
+.login img {
   height: 10%;
   width: 10%;
   padding: 3px;
-  background-color: #ffc107;
+  background-color: #20c997;
   border-radius: 50%;
 }
 
-.sbmt {
-  text-align: center;
+.logo {
+  animation: myAnim 5s ease 0s 1 normal none;
+}
+
+@keyframes myAnim {
+  0% {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+/* styles for Sign Up*/
+.SignUp {
+  background-color: #f7fd91;
+}
+
+.Sp h2 {
+  color: #006E51;
+}
+
+.float {
+  animation-name: flotar;
+  animation-duration: 6s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes flotar {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.01);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+/*styles for home*/
+.head {
+  background-color: #f7fd91;
+}
+
+.rot img {
+  box-shadow: 0px -1px 39px 26px rgba(0, 0, 0, 0.48);
+  height: 20rem;
+  width: 35rem;
+  margin: 2%;
+}
+
+.imagenes {
+  background-color: #f7fd91;
+}
+
+.oper {
+  background-color: #f7fd91;
+}
+
+footer {
+  background-color: #bdd1de;
 }
 
 /*# sourceMappingURL=s.css.map */
