--- a/estilos/s.scss
+++ b/estilos/s.scss
@@ -1,22 +1,27 @@
+
+
+
 $blue: #007bff;
-$indigo: #6610f2;
-$purple: #6f42c1;
+
 $pink: #e83e8c;
 $red: #dc3545;
 $orange: #fd7e14;
 $yellow: #ffc107;
 $green: #28a745;
+$green-dark:  #006E51;
 $teal: #20c997;
 $cyan: #17a2b8;
 $white: #fff;
 $gray-600: #6c757d;
 $gray-800: #343a40;
 $blue-200: #bee1f4;
+$marron: #f7fd91;
+
+
 
 $colors: (
   "blue":       $blue,
-  "indigo":     $indigo,
-  "purple":     $purple,
+
   "pink":       $pink,
   "red":        $red,
   "orange":     $orange,
@@ -29,17 +34,32 @@ $colors: (
   "gray-dark":  $gray-800,
   "blue-fond": $blue-200,
 );
-
+*{
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
 .cont{
-  background-color: map-get($map: $colors, $key:blue-fond );
+  background-color:$marron;
 }
 .logo{
-  max-width: 100px;
-  height: auto;
-  border-radius: 20%;
+  img{
+      max-width: 100px;
+      height: auto;
+      border-radius: 20%;
+
+  }
+  h1{
+    font-family: 'Cormorant SC', serif;
+    color:$green-dark; 
+  }
+  
+
 }
-.card{
-  background-color: $blue-200;
+.login{
+  background-color: $marron;
+  border: none;
+  h2{
+    color: $green-dark;
+  }
 
   .m1{
     padding: 12px;
@@ -48,13 +68,83 @@ $colors: (
     height: 10%;
     width: 10%;
     padding: 3px;
-    background-color: $yellow;
+    background-color:$teal;
     border-radius: 50%;
 
   }
 }
-.sbmt{
-  text-align: center;
+
+.logo{
+  animation: myAnim 5s ease 0s 1 normal none;
+}
+@keyframes myAnim {
+  0% {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 
+  /* styles for Sign Up*/
+
+.SignUp{
+  background-color: $marron;
+}
+.Sp{
+  h2{
+    color: $green-dark;
+  }
+}
+
+
+
+.float {
+  animation-name: flotar;
+  animation-duration: 6s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes flotar {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.01);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/*styles for home*/
+
+.head{
+  background-color:$marron;
+}
+
+.rot{
+
+  
+  img{  
+    box-shadow: 0px -1px 39px 26px rgba(0,0,0,0.48);
+    height: 20rem;
+    width: 35rem;
+    margin: 2%;
+  }
+}
+.imagenes{
+  background-color: $marron;
+  
+}
+.oper{
+  background-color: $marron;
+}
+footer{
+  background-color: #bdd1de;
+}
