--- a/estilos/s.scss
+++ b/estilos/s.scss
@@ -9,7 +9,7 @@ $orange: #fd7e14;
 $yellow: #ffc107;
 $green: #28a745;
 $green-dark:  #006E51;
-$teal: #20c997;
+$teal: #36b48e;
 $cyan: #17a2b8;
 $white: #fff;
 $gray-600: #6c757d;
@@ -39,6 +39,7 @@ $colors: (
 }
 .cont{
   background-color:$marron;
+  height: max-content;
 }
 .logo{
   img{
@@ -62,12 +63,11 @@ $colors: (
   }
 
   .m1{
-    padding: 12px;
+    padding: 8px;
   }
   img{
-    height: 10%;
-    width: 10%;
-    padding: 3px;
+    
+    width: 12%;
     background-color:$teal;
     border-radius: 50%;
 
@@ -86,6 +86,14 @@ $colors: (
   100% {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+.f1{
+  background-color: $marron;
+  .card{
+    background-color: $marron;
+    border: none;
   }
 }
 
