esilos de posicionaminento

--- a/estilos/estilosHome.css
+++ b/estilos/estilosHome.css
@@ -46,11 +46,10 @@ footer {
 .popup {
   display: none;
   position: fixed;
-  top: 10%;
-  left: 10%;
-  transform: translate(50%, 10%);
-  background-color: #fff;
-  padding: 20px;
+  top: 2%;
+  left: 2%;
+  transform: translate(0%, 0%);
+  background-color: #f0fb59;
   z-index: 10000;
 }
 
