--- a/estilos/estilosHome.scss
+++ b/estilos/estilosHome.scss
@@ -1,31 +1,24 @@
-$marron: #f7fd91;
 $green-dark:  #006E51;
-
-
-
+$marron: #87CBB9;
+$green-dark:  #006E51;
 .logo{
     img{
         max-width: 100px;
         height: auto;
         border-radius: 20%;
-  
     }
     h1{
       font-family: 'Cormorant SC', serif;
       color:$green-dark; 
     }
-    
   
   }
-
 
 .head{
     background-color:$marron;
   }
   
   .rot{
-  
-    
     img{  
       box-shadow: 0px -1px 39px 26px rgba(0,0,0,0.48);
       height: 22rem;
@@ -38,6 +31,7 @@ $green-dark:  #006E51;
     margin:auto;
     
   }
+  
   .oper{
     background-color: $marron;
   }
@@ -51,17 +45,21 @@ $green-dark:  #006E51;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(195, 206, 112, 0.87);
     z-index: 9999;
+    overflow-y: auto;
   }
 .popup {
     display: none;
     position:fixed;
+    width: 50%;
     top: 2%;
     left: 2%;
     transform: translate(0%, 0%);
     background-color: #f0fb59;
     z-index: 10000;
+    overflow-y: auto;
+    border-radius: 3%;
   }
 
   /* estilos del formmulario*/
@@ -74,18 +72,16 @@ $green-dark:  #006E51;
 
     margin-bottom: 20px;
     label{
-      background-color: #4CAF50;
-      
-    }
-    input{
-      width: 55%;
-      background-color: brown;
-    }
-}
-
-.form-group label {
-    display: block;
     margin-bottom: 5px;
+    }
+    button{
+      padding: 10px 20px;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
 }
 
 .form-group input,
@@ -94,6 +90,7 @@ $green-dark:  #006E51;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    background-color: #abcbc3;
 }
 
 .form-group textarea {
@@ -103,14 +100,8 @@ $green-dark:  #006E51;
     border-radius: 4px;
     resize: vertical;
 }
-
-.form-group button {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-   
+.card-body{
+  background-color: #bdf7f4;
 }
+
 
